# Capestone_Ey

./: .gitignore  DEPLOYMENT_GUIDE.md  GL_Guardian_Executive_Presentation.pptx  GL_Guardian_Presentation.pptx  LICENSE  PROJECT_ANALYSIS.md  README.md  Skeptic_Engine_Audit_Report.md  Skeptic_Engine_Brand_Style_Guide.docx  Skeptic_Engine_Narration_Script.docx  Skeptic_Engine_Presentation.pptx  Skeptic_Engine_Story_POV.pptx  Skeptic_Engine_Story_Script.docx  Skeptic_Engine_Storyboard_Bible.docx  docker-compose.production.yml  production.env.example  read_docx.py  sample_metrics_1000.xlsx  sample_metrics_10000.xlsx  ~$eptic_Engine_Narration_Script.docx  ~$eptic_Engine_Story_Script.docx
Backend/: .dockerignore  .env.example  .env.local-production.example  .gitignore  Dockerfile  LOCAL_PRODUCTION.md  PREREQUISITES.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  STRUCTURE.md  alembic.ini  docker-compose.local-infra.yml  docker-compose.yml  k8s-deployment.yaml  main.py  pyproject.toml  railway.api.json  railway.beat.json  railway.worker.json  requirements.txt
Backend/app/: main.py
Backend/eventstore/: Dockerfile
Backend/history/: BACKEND_FIXES.md  SETUP_COMPLETE.md
Backend/migrations/: env.py
Backend/sample_data/: sample_gl_1000_diff.csv  sample_gl_fx_verifiable.csv
Backend/scripts/: check_local_stack.py  create_local_db.sql  create_sample_ledger_table.sql  ensure_schema.py  probe_duffel.py  probe_flight_api.py  probe_fuel_api.py  probe_gst_api.py  production_smoke.py
Backend/tests/: conftest.py  test_agents.py  test_api.py  test_audit.py  test_auth.py  (+9 more)
(+357 files in other folders)
